# brimer

./: .gitignore  pyproject.toml
bridge/: __init__.py  bridges_dataset.pkl  bridges_dataset_part1.pkl  qiaopai.py  text.py
bridge/database/: decoder.py  pachong.py  wangzhan.txt  数据获取.docx
bridge/database/output/: 90031-1752545161-.html  ARDARD%3Afab6533d.5b0d.11f0.bb34.ac1f6b5a106e-1751877604-.html  decoder.txt  decoder2.txt  decoder_all.txt  httpswww.bridgebase.comv3applv.html
models/: __init__.py  all_embeddings.pt  brimer.py  brimer_2.py  brimer_model_summary.txt  brimer_onnx.py  dataset_briges.py  model_tools.py
